// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - List group renders correctly 1`] = `
<jest>
  <ul
    class="list-group"
  >
    <li
      class="list-group-item list-group-item-danger"
    >
      Label 1
    </li>
    <li
      class="list-group-item list-group-item-secondary"
    >
      Label 2
    </li>
    <li
      class="list-group-item list-group-item-primary"
    >
      Label 3
    </li>
    <li
      class="list-group-item list-group-item-info"
    >
      Label 4
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="example-form-input-1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="example-form-input-1"
        >
          Example form input
        </label>
      </div>
    </li>
    <li
      class="list-group-item list-group-item-warning d-flex justify-content-between align-items-center"
    >
      Label 5
      <span
        class="ms-2 badge rounded-pill bg-primary text-white"
      >
        10
      </span>
    </li>
  </ul>
</jest>
`;

exports[`OE - List group renders correctly horizontal 1`] = `
<jest>
  <ul
    class="list-group list-group-horizontal"
  >
    <li
      class="list-group-item list-group-item-danger"
    >
      Label 1
    </li>
    <li
      class="list-group-item list-group-item-secondary"
    >
      Label 2
    </li>
    <li
      class="list-group-item list-group-item-primary"
    >
      Label 3
    </li>
    <li
      class="list-group-item list-group-item-info"
    >
      Label 4
    </li>
    <li
      class="list-group-item"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="example-form-input-1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="example-form-input-1"
        >
          Example form input
        </label>
      </div>
    </li>
    <li
      class="list-group-item list-group-item-warning d-flex justify-content-between align-items-center"
    >
      Label 5
      <span
        class="ms-2 badge rounded-pill bg-primary text-white"
      >
        10
      </span>
    </li>
  </ul>
</jest>
`;

exports[`OE - List group renders correctly numbered 1`] = `
<jest>
  <ol
    class="list-group list-group-numbered"
  >
    <li
      class="list-group-item list-group-item-info"
    >
      Ordered Label
    </li>
    <li
      class="list-group-item list-group-item-light"
    >
      Ordered Label
    </li>
    <li
      class="list-group-item list-group-item-dark"
    >
      Ordered Label
    </li>
    <li
      class="list-group-item list-group-item-success"
    >
      Ordered Label
    </li>
    <li
      class="list-group-item"
    >
      <input
        class="form-check-input"
        id="example-form-input-1"
        type="radio"
      />
      <label
        class="form-check-label"
        for="example-form-input-1"
      >
        Example form input
      </label>
    </li>
    <li
      class="list-group-item list-group-item-warning d-flex justify-content-between align-items-center"
    >
      <div
        class="ms-2 me-auto"
      >
        Cras justo odio
      </div>
      <span
        class="ms-2 badge rounded-pill bg-primary text-white"
      >
        10
      </span>
    </li>
  </ol>
</jest>
`;

exports[`OE - List group renders correctly with actionable items 1`] = `
<jest>
  <div
    class="list-group"
  >
    <button
      aria-disabled="true"
      class="list-group-item list-group-item-action"
      disabled="true"
      type="button"
    >
      Button 1
    </button>
    <a
      class="list-group-item list-group-item-action"
      href="/test-path"
    >
      Link 1
    </a>
    <button
      class="list-group-item list-group-item-action"
      type="button"
    >
      Button 2
    </button>
    <a
      class="list-group-item-success list-group-item list-group-item-action"
      href="/test-path-2"
    >
      Link 2
    </a>
  </div>
</jest>
`;
